add thumbnail, fix tests, add search criteria