@@ -1,6 +1,8 @@
 package codingnomads.bibliotrackbooklibrary;
 
+import codingnomads.bibliotrackbooklibrary.model.response.ImageLinks;
 import codingnomads.bibliotrackbooklibrary.model.response.Item;
+import codingnomads.bibliotrackbooklibrary.model.response.VolumeInfo;
 import codingnomads.bibliotrackbooklibrary.service.SearchService;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,6 +12,7 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Profile;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
@@ -45,15 +48,31 @@ public class AppControllerTests {
     @Test
     public void performSearch_Success() throws Exception {
         String searchText = "test";
-        List<Item> searchResults = Arrays.asList(new Item(), new Item());
+        String searchCriteria = "default";
+        Item item = Item.builder()
+                .volumeInfo(VolumeInfo.builder()
+                        .authors(List.of(""))
+                        .description("")
+                        .title("")
+                        .imageLinks(ImageLinks.builder()
+                                .thumbnail("")
+                                .build())
+                        .publishedDate("")
+                        .publisher("")
+                        .build())
+                .build();
 
-        when(searchService.performSearch(searchText)).thenReturn(searchResults);
+        List<Item> searchResults = new ArrayList<>();
+        searchResults.add(item);
+
+        when(searchService.performSearch(searchText, searchCriteria)).thenReturn(searchResults);
 
         mockMvc.perform(post("/search")
-                .param("searchText", searchText))
+                .param("searchText", searchText)
+                .param("searchCriteria", searchCriteria))
                 .andExpect(status().isOk())
                 .andExpect(model().attribute("searchResults", searchResults));
 
-        verify(searchService, times(1)).performSearch(searchText);
+        verify(searchService, times(1)).performSearch(searchText, searchCriteria);
     }
 }
